--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -48,6 +48,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
+      - name: Run a multi-line script
+        run: |
+          mkdir ../build
+          cp -T docker-compose.yaml ../build
+          tar -cvf deploy.tar ../build/
       - name: copy file via ssh password
         uses: appleboy/scp-action@master
         with:
@@ -55,7 +60,7 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           rm: true
-          source: "build/docker-compose.yaml"
+          source: "deploy.tar"
           target: "yamdb"
 
       - name: executing remote ssh commands to deploy
