--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -49,7 +49,7 @@ jobs:
     needs: build_and_push_to_docker_hub
     steps:
       - name: copy file via ssh password
-        uses: appleboy/scp-action@v.0.0.10
+        uses: appleboy/scp-action@v0.0.10
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
