--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -48,15 +48,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
-      - name: copy file via ssh password
-        uses: appleboy/scp-action@v0.0.10
+      - name: Publish
+        uses: nogsantos/scp-deploy@master
         with:
+          src: ./docker-compose.yaml
           host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
+          remote: yamdb
+          user: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          rm: true
-          source: "*"
-          target: "yamdb"
 
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
@@ -69,6 +68,7 @@ jobs:
             sudo docker pull ynmatveev/yamdb
             sudo docker-compose down
             sudo docker-compose up -d --build
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
