--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -48,6 +48,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+        
+      - name: copy files via ssh
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          source: "docker-compose.yaml,.env"
+          target: "yamdb"
+          rm: true
+        
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
