--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -57,8 +57,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          rm: true
-          source: "docker-compose.yaml,.env"
+          source: "docker-compose.yaml,.env,nginx/*"
           target: "yamdb"
     
       - name: executing remote ssh commands to deploy
