--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -58,7 +58,7 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           rm: true
-          source: "docker-compose.yaml,.env,nginx/default.conf"
+          source: "docker-compose.yaml,.env"
           target: "yamdb"
     
       - name: executing remote ssh commands to deploy
