--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
       - "80:80"
 
     volumes:
-      - nginx_conf:/etc/nginx/conf.d/default.conf
+      - nginx_conf:/etc/nginx/conf.d/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
 
