add domain in settings and nginx

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 127.0.0.1;
+    server_name 130.193.57.232 ynm-project.online www.ynm-project.online;
 
     location /static/ {
         root /var/html/;
