--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -42,7 +42,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ynmatveev/yamdb:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/yamdb:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -50,7 +50,7 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-        
+
       - name: copy files via ssh
         uses: appleboy/scp-action@master
         with:
@@ -58,9 +58,10 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           overwrite: true
+          rm: true
           source: "docker-compose.yaml,.env"
           target: "yamdb"
-    
+
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
@@ -69,7 +70,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd yamdb
-            sudo docker pull ynmatveev/yamdb
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb
             sudo docker-compose down
             sudo docker-compose up -d --build
 
