--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
-      - name: copy files via ssh
+      - name: Copy files via ssh
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
@@ -59,7 +59,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           overwrite: true
           rm: true
-          source: "docker-compose.yaml,.env"
+          source: "docker-compose.yaml,.env,nginx/default.conf"
           target: "yamdb"
 
       - name: executing remote ssh commands to deploy
