--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,6 @@ services:
     volumes:
       - static_value:/code/static/
       - media_value:/code/media/
-      - nginx_conf:/code/nginx/
 
     depends_on:
       - db
@@ -27,7 +26,7 @@ services:
       - "80:80"
 
     volumes:
-      - nginx_conf:/etc/nginx/conf.d/
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - static_value:/var/html/static/
       - media_value:/var/html/media/
 
@@ -38,4 +37,3 @@ volumes:
   postgres_data:
   static_value:
   media_value:
-  nginx_conf:
