--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -42,12 +42,26 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ynmatveev/yamdb:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/yamdb:latest
 
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+
+      - name: Copy files via ssh
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          overwrite: true
+          rm: true
+          source: "docker-compose.yaml,.env,nginx/default.conf"
+          target: "yamdb"
+
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
@@ -55,9 +69,11 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            sudo docker pull ynmatveev/yamdb
+            cd yamdb
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb
             sudo docker-compose down
             sudo docker-compose up -d --build
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
