--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -70,6 +70,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd yamdb
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb
             sudo docker-compose down
             sudo docker-compose up -d --build
 
