change vps for deploy

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 130.193.57.232 ynm-project.online www.ynm-project.online;
+    server_name yamdb.ynm-project.online www.yamdb.ynm-project.online;
 
     location /static/ {
         root /var/html/;
