--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -13,6 +13,11 @@ jobs:
       with:
         python-version: 3.8
 
+    - name: Decrypt secret
+      run: ./.github/decrypt_secret.sh
+      env:
+          GPG_SECRET_PASSPHRASE: ${{ secrets.GPG_SECRET_PASSPHRASE }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -52,6 +57,11 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
+      - name: Decrypt secret
+        run: ./.github/decrypt_secret.sh
+        env:
+            GPG_SECRET_PASSPHRASE: ${{ secrets.GPG_SECRET_PASSPHRASE }}
+            
       - name: Copy files via ssh
         uses: appleboy/scp-action@master
         with:
